--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
-        /* --- Spinner de Carregamento (CSS Puro) --- */
+        /* --- Spinner de Carregamento --- */
         .spinner {
             width: 20px;
             height: 20px;
@@ -348,7 +348,7 @@
         </main>
     </div>
 
-    <!-- Estrutura do Modal -->
+    <!-- Estrutura -->
     <div id="photoModal" class="modal-overlay">
         <div class="modal-content">
             <h2>Que tal uma foto?</h2>
@@ -363,7 +363,7 @@
 
     <script>
         // --- INÍCIO DA CONFIGURAÇÃO ---
-        // A URL do seu App Script foi inserida aqui.
+        // A URL do App Script.
         const googleAppScriptUrl = 'https://script.google.com/macros/s/AKfycbz2-UBeNNlcP9NBfvqRDEdo5zmYHxXJu5137ZlPrMZCT4YJVMK38bYlCNQK5h5j1ymvKQ/exec';
         // --- FIM DA CONFIGURAÇÃO ---
 
